// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collapsibleFormComponent exposes a \`focus\` function 1`] = `
Object {
  "configurable": true,
  "enumerable": false,
  "value": [Function],
  "writable": true,
}
`;

exports[`collapsibleFormComponent exposes a \`value\` getter 1`] = `
Object {
  "configurable": true,
  "enumerable": false,
  "get": [Function],
  "set": undefined,
}
`;

exports[`collapsibleFormComponent exposes specified proxy methods 1`] = `
Object {
  "configurable": true,
  "enumerable": true,
  "value": [Function],
  "writable": true,
}
`;

exports[`collapsibleFormComponent renders DOM element children as expected 1`] = `
<div
  class="CollapsableFormComponent form-group CollapsableFormComponent--collapsed"
>
  <button
    aria-controls="collapsable-form-1"
    aria-expanded="false"
    class="CollapseExpandLinkComponent twbs-btn twbs-btn-link collapsed"
    data-target="#collapsable-form-1"
    data-toggle="collapse"
    style="padding-left: 0px;"
    type="button"
  >
    <strong
      class="semi-bold"
    >
      Test Input Field
    </strong>
    <i
      class="fa fa-angle-down"
      style="margin-left: 6px;"
    />
  </button>
  <div
    aria-expanded="false"
    class="CollapsableFormComponent__content collapse"
    id="collapsable-form-1"
  >
    <input
      class="input"
    />
  </div>
</div>
`;

exports[`collapsibleFormComponent renders React component children as expected 1`] = `
<div
  class="CollapsableFormComponent form-group CollapsableFormComponent--collapsed"
>
  <button
    aria-controls="collapsable-form-2"
    aria-expanded="false"
    class="CollapseExpandLinkComponent twbs-btn twbs-btn-link collapsed"
    data-target="#collapsable-form-2"
    data-toggle="collapse"
    style="padding-left: 0px;"
    type="button"
  >
    <strong
      class="semi-bold"
    >
      Test Input Field
    </strong>
    <i
      class="fa fa-angle-down"
      style="margin-left: 6px;"
    />
  </button>
  <div
    aria-expanded="false"
    class="CollapsableFormComponent__content collapse"
    id="collapsable-form-2"
  >
    <pre>
      {"this-should-be":"passed through","className":"input"}
    </pre>
  </div>
</div>
`;
